2010-09-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix `twittering-push-uri-onto-kill-ring'.
	(twittering-push-uri-onto-kill-ring): confirm that `kill-ring' is
	non-nil before calling `current-kill'.

	* twittering-mode.el: Copy tweets by "C-<mouse-3>".
	Thanks to Faried Nawaz.
	(twittering-mode-menu-on-uri-map): new keymap for menu on URI.
	(twittering-mode-on-uri-map): new keymap used on URI.
	(twittering-mode-map): bind "C-<down-mouse-3>" to
	`mouse-set-point' to move the point and bind "C-<mouse-3>" to
	`twittering-push-tweet-onto-kill-ring'.
	(twittering-make-clickable-status-datum): embed new keymap
	`twittering-mode-on-uri-map' in texts that have `uri' property.
	(twittering-generate-format-table): likewise.
	(twittering-generate-formater-for-first-spec): likewise.
	(twittering-push-tweet-onto-kill-ring): new function.

	* twittering-mode.el: Introduce a function sending a HTTP requests
	with `curl'.
	(twittering-connection-type-table): use new functions
	`twittering-start-http-session-generic' and
	`twittering-send-http-request-curl' for connection-type `curl'.
	(twittering-oauth-get-token-function-table): register the
	pre-processing function for `curl'.
	(twittering-oauth-get-token-alist-generic): new function. This
	works with a function sending HTTP request.
	(twittering-oauth-get-token-alist-curl): removed. The function is
	replaced with the combination of
	`twittering-oauth-get-token-alist-generic' and
	`twittering-send-http-request-curl'.
	(twittering-oauth-get-token-alist): use
	`twittering-oauth-get-token-alist-generic' if the found entry is a
	cons pair of functions.
	(twittering-send-http-request-curl): new function. This is
	abstract interface for sending HTTP request via `curl'.
	(twittering-start-http-session): add more entries to
	`connection-info'. `twittering-send-http-request-curl' requires
	them.
	(twittering-start-http-session-generic): new function.
	(twittering-start-http-session-curl): removed. The function is